# gpu-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
src/gpu_monitor/: __init__.py  cli.py  config.py  monitor.py
static/: index.html  style.css
