[project]
name = "gpu-monitor"
version = "1.0.0"
description = "GPU monitoring tool for cluster hosts where you have SSH access."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
]

[project.scripts]
gpu_monitor = "gpu_monitor.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.gpu-monitor]
# SSH monitoring configuration
hosts = [
    "c535",
    "c536",
    "c104",
    "c314",
    "c328",
    "c324",
    "c606",
    "c610",
    "c602"
]

# Server configuration
poll_interval = 5.0
bind_host = "127.0.0.1"
bind_port = 8000
ssh_config_path = "~/.ssh/config"